--- a/my website/index.html
+++ b/my website/index.html
@@ -41,7 +41,7 @@
             border-radius: 4px;
        }
        .btn:hover{
-           color: darkgoldenrod;
+           color: rgb(184, 144, 11);
            background-color: rgb(223, 245, 201);
             border: 2px solid black;
        }
@@ -50,7 +50,7 @@
 <body>
     <div class="container" id="cont1">
         <h3>This is my heading</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, reprehenderit. Quam culpa eius aliquam id cumque saepe, provident odio sed eos quia nihil modi error voluptate vero autem quibusdam aperiam exercitationem! Quam, consequuntur velit.</p>
+        <p>Lorem ipsum dolo Obcaecati, reprehenderit. Quam culpa eius aliquam id cumque saepe, provident odio sed eos quia nihil modi error voluptate vero autem quibusdam aperiam exercitationem! Quam, consequuntur velit.</p>
         <a href="https://yahoo.com" class="btn">Read more</a>
         <button class="btn">Contact us</button>
     </div>
